[package]
name = "bevy_veil"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
description = "Modal/overlay stack for bevy_ui: a blocking scrim, deterministic layering, an input-capture gate, and an ergonomic builder. Native bevy_ui, no widget framework."
repository = "https://github.com/marmikshah/bevy_veil"
keywords = ["bevy", "ui", "modal", "overlay", "gamedev"]
categories = ["game-development"]

# The lib asks for the MINIMAL bevy surface it needs; the consuming game brings
# its own bevy with its own features and cargo unifies. Keeping render/winit out
# of here means we don't dictate a platform stack to downstream crates.
[dependencies]
bevy = { version = "0.18.1", default-features = false, features = [
    "bevy_ui",
    "bevy_text",
    "bevy_picking",
    "ui_picking",
] }

# Examples need a real windowed app; that platform stack lives here so the lib
# proper stays lean.
[dev-dependencies]
bevy = { version = "0.18.1", default-features = false, features = [
    "2d",
    "default_font",
] }
